feat: endpoint get stats for admin
